fix label size causing vertical misalignment

--- a/src/app/components/mortgage/mortgage.scss
+++ b/src/app/components/mortgage/mortgage.scss
@@ -16,6 +16,8 @@ h2 {
 }
 
 .form-group {
+  display: flex;
+  flex-direction: column;
   margin-bottom: var(--spacing);
 
   label {
@@ -28,6 +30,7 @@ h2 {
 
   input {
     width: 100%;
+    margin-top: auto;
     padding: 0.625rem 0.75rem;
     border: 1px solid var(--color-input-border);
     border-radius: var(--radius-sm);
